kubernetes/applications/media/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: media
spec:
  selector:
    app: sabnzbd
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
