kubernetes/applications/media/sabnzbd/cloudflare-tunnel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd-cloudflare
  namespace: media
  labels:
    app: sabnzbd
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: sabnzbd.kernow.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  number: 8080
