kubernetes/applications/media/sabnzbd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: cloudflare-tunnel
  tls:
    - hosts:
        - sabnzbd.kernow.io
      secretName: kernow-io-tls
  rules:
    - host: sabnzbd.kernow.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  number: 8080
